# zim-reader

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.json
.github/workflows/: ci.yml
crates/zim-reader/: Cargo.toml
crates/zim-reader/src/: archive.rs  article.rs  cluster.rs  dirent.rs  error.rs  header.rs  lib.rs  mime.rs  namespace.rs  pointer_list.rs  util.rs
crates/zim-reader/tests/: error_path.rs  integration.rs
crates/zim-reader/tests/common/: mod.rs
docs/: zim-reader-spec.md
tools/zim-info/: Cargo.toml
tools/zim-info/src/: main.rs
