[package]
name = "zim-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Pure-Rust library for reading ZIM archive files"
license = "MIT OR Apache-2.0"
keywords = ["zim", "wikipedia", "kiwix", "openzim", "offline"]
categories = ["encoding", "parsing"]

[dependencies]
memmap2 = "0.9"
thiserror = "1"
lru = "0.12"
md-5 = "0.10"
lzma-rs = { version = "0.3", optional = true }
ruzstd = { version = "0.7", optional = true }

[features]
default = ["compression-pure"]
compression-pure = ["dep:lzma-rs", "dep:ruzstd"]

[dev-dependencies]
tempfile = "3"
xz2 = "0.1"
zstd = "0.13"
