[package]
name = "zim-reader"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Pure-Rust library for reading ZIM archive files"
license = "MIT OR Apache-2.0"
authors = ["Michael Simmons <moozoo.wizard@gmail.com>"]
repository = "https://github.com/moozoo64/zim-reader"
homepage = "https://github.com/moozoo64/zim-reader"
documentation = "https://docs.rs/zim-reader"
readme = "../../README.md"
keywords = ["zim", "wikipedia", "kiwix", "openzim", "offline"]
categories = ["encoding", "parsing"]
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "LICENSE-MIT",
  "LICENSE-APACHE",
  "CHANGELOG.md",
]

[dependencies]
memmap2 = "0.9"
thiserror = "2.0.18"
lru = "0.17.0"
md-5 = "0.11.0"
lzma-rs = { version = "0.3", optional = true }
ruzstd = { version = "0.8.2", optional = true }

[features]
default = ["compression-pure"]
compression-pure = ["dep:lzma-rs", "dep:ruzstd"]

[dev-dependencies]
tempfile = "3"
xz2 = "0.1"
zstd = "0.13"
